WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12823
REGRESSION(
r16968
-16977): unable to prevent selection by cancelling "selectstart" event
https://bugs.webkit.org/show_bug.cgi?id=12823
Summary
REGRESSION(r16968-16977): unable to prevent selection by cancelling "selectst...
Tom Brown
Reported
2007-02-19 18:11:47 PST
When inside an event handler for the "selectstart" event, the selection should be preventable, either by returning false, or by calling the Event.preventDefault method. This was working in earlier nightlies. I have narrowed it down to some change between
r16968
(working) and
r16977
(broken).
Attachments
Test case reduction
(474 bytes, text/html)
2007-02-19 18:13 PST
,
Tom Brown
no flags
Details
Go through shouldSelect() in the selection-via-autoscroll case too
(32.91 KB, patch)
2007-02-23 03:37 PST
,
mitz
no flags
Details
Formatted Diff
Diff
Go through shouldSelect() in the selection-via-autoscroll case too
(5.05 KB, patch)
2007-02-23 03:42 PST
,
mitz
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tom Brown
Comment 1
2007-02-19 18:13:11 PST
Created
attachment 13260
[details]
Test case reduction Open the file, follow the instructions.
mitz
Comment 2
2007-02-20 00:35:28 PST
Maybe <
http://trac.webkit.org/projects/webkit/changeset/16975
>
mitz
Comment 3
2007-02-23 03:37:02 PST
Created
attachment 13345
[details]
Go through shouldSelect() in the selection-via-autoscroll case too Includes change log and layout test.
mitz
Comment 4
2007-02-23 03:38:49 PST
Comment on
attachment 13345
[details]
Go through shouldSelect() in the selection-via-autoscroll case too Woops, what are the pixel results doing there?!
mitz
Comment 5
2007-02-23 03:42:19 PST
Created
attachment 13346
[details]
Go through shouldSelect() in the selection-via-autoscroll case too
Darin Adler
Comment 6
2007-02-23 08:36:30 PST
Comment on
attachment 13346
[details]
Go through shouldSelect() in the selection-via-autoscroll case too r=me
Sam Weinig
Comment 7
2007-02-23 18:47:06 PST
Landed in
r19835
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug