LayoutTests:

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12823
          REGRESSION(r16968-16977): unable to prevent selection by cancelling "selectstart" event

        * fast/events/selectstart-during-autoscroll-expected.txt: Added.
        * fast/events/selectstart-during-autoscroll.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12823
          REGRESSION(r16968-16977): unable to prevent selection by cancelling "selectstart" event

        Test: fast/events/selectstart-during-autoscroll.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::autoscroll): Invoke the renderer's shouldSelect() --
        which dispatches the selection DOM event and gives it a chance to cancel
        the selection -- before updating the selection during autoscroll.



Canonical link: https://commits.webkit.org/16676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19835 268f45cc-cd09-0410-ab3c-d52691b4dbfc